added env variables